syntax = "proto3";

message ReqLoginPacket {
    string userName = 1;
    string password = 2;
}